--- a/alertmanager/alertmanager.yml
+++ b/alertmanager/alertmanager.yml
@@ -11,8 +11,8 @@ route:
 receivers:
   - name: 'default'
     slack_configs:
-      - api_url: 'https://hooks.slack.com/services/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'
-        channel: '#devops-alerts'
+      - api_url: 'Provide your slack api webhook URL'
+        channel: 'Channel name'
         text: '{{ template "slack.alert" . }}'
         send_resolved: true
 
